Gap javítások, partner-data lista sorrend, responsive beállítások

--- a/partner-list.html
+++ b/partner-list.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="dashboard">
+    <div class="dashboard partner-list">
       <div class="logo-bar">
         <img src="./files/logo.svg" class="logo" />
         <img src="./files/menu.svg" class="logo" />
