Még több padding/font-size fix, ikonok/gombok eltolva

--- a/partner-list.html
+++ b/partner-list.html
@@ -26,11 +26,11 @@
       </div>
       <div class="cards">
         <div class="card">
-          <div class="column">
+          <div class="card-column">
             <h2>Nagy Márk</h2>
             <p>06 20 667 7689</p>
           </div>
-          <div class="column">
+          <div class="card-column">
             <p>1990.10.12</p>
             <p>nagy.mark@gmail.com</p>
           </div>
@@ -41,11 +41,11 @@
           </div>
         </div>
         <div class="card">
-          <div class="column">
+          <div class="card-column">
             <h2>Nagy Márk</h2>
             <p>06 20 667 7689</p>
           </div>
-          <div class="column">
+          <div class="card-column">
             <p>1990.10.12</p>
             <p>nagy.mark@gmail.com</p>
           </div>
@@ -56,11 +56,11 @@
           </div>
         </div>
         <div class="card">
-          <div class="column">
+          <div class="card-column">
             <h2>Nagy Márk</h2>
             <p>06 20 667 7689</p>
           </div>
-          <div class="column">
+          <div class="card-column">
             <p>1990.10.12</p>
             <p>nagy.mark@gmail.com</p>
           </div>
@@ -71,11 +71,11 @@
           </div>
         </div>
         <div class="card">
-          <div class="column">
+          <div class="card-column">
             <h2>Nagy Márk</h2>
             <p>06 20 667 7689</p>
           </div>
-          <div class="column">
+          <div class="card-column">
             <p>1990.10.12</p>
             <p>nagy.mark@gmail.com</p>
           </div>
@@ -86,11 +86,11 @@
           </div>
         </div>
         <div class="card">
-          <div class="column">
+          <div class="card-column">
             <h2>Nagy Márk</h2>
             <p>06 20 667 7689</p>
           </div>
-          <div class="column">
+          <div class="card-column">
             <p>1990.10.12</p>
             <p>nagy.mark@gmail.com</p>
           </div>
