Designban szereplő méretekre átalakítás

--- a/new-partner.html
+++ b/new-partner.html
@@ -122,6 +122,18 @@
               </div>
             </div>
             <div class="data">
+              <p class="title">Valami:</p>
+              <div class="editor-container">
+                <input type="text" class="edit-partner-data" />
+              </div>
+            </div>
+            <div class="data">
+              <p class="title">Valami:</p>
+              <div class="editor-container">
+                <input type="text" class="edit-partner-data" />
+              </div>
+            </div>
+            <div class="data">
               <p class="title">Személyi ig. szám:</p>
               <div class="editor-container">
                 <select property="gender" class="edit-partner-data">
