--- a/login.html
+++ b/login.html
@@ -12,11 +12,11 @@
         <img src="./files/logo.svg" class="logo" />
       </div>
 
-      <div class="popup-window">
+      <div class="popup-window ">
             <div class="header">
                 <p>bejelentkezés</p>
             </div>
-            <div class="body">
+            <div class="body login">
                 <div class="email">
                     <img src="./files/email.svg" class="icon">
                     <input type="text" placeholder="Email">
